cambie de nuevo el titulo por bienvenidos y bienvenidas

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
     <div class="clearfix colelem" id="u5187-4"><!-- content -->
-     <p>BIENVENID@</p>
+     <p>BIENVENID@S</p>
     </div>
     <div class="clearfix colelem" id="pslideshowu4959"><!-- group -->
      <div class="SlideShowWidget clearfix HeroFillFrame grpelem" id="slideshowu4959" data-visibility="changed" style="visibility:hidden"><!-- none box -->
