ajustes del 23 agosto

--- a/carrito-de-compras.html
+++ b/carrito-de-compras.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Carrito de compras</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_si-inicio_.css?crc=4031506634"/>
-  <link rel="stylesheet" type="text/css" href="css/carrito-de-compras.css?crc=268280998" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_si-inicio_.css?crc=4073843502"/>
+  <link rel="stylesheet" type="text/css" href="css/carrito-de-compras.css?crc=3974714374" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -42,6 +42,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u1794"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1795" href="nosotros.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1798-4"><!-- content --><p>Nosotros</p></div></a>
       </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u5914"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u5915" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5918-4"><!-- content --><p>Registro</p></div></a>
+      </div>
      </nav>
      <a class="nonblock nontext clip_frame grpelem" id="u2547" href="mi-perfil.html"><!-- image --><img class="block" id="u2547_img" src="images/1827504.png?crc=258168644" alt="" title="Notificaciones por leer" data-heightwidthratio="1" data-image-width="29" data-image-height="29"/></a>
      <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u1761" href="carrito-de-compras.html"><!-- image --><img class="block" id="u1761_img" src="images/263142.png?crc=4073066833" alt="" title="Carrito de Compras" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
@@ -61,30 +64,46 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="u2300-4"><!-- content -->
      <h1>Carrito de Compras</h1>
     </div>
-    <div class="clearfix colelem" id="ppu2293"><!-- group -->
-     <div class="clearfix grpelem" id="pu2293"><!-- column -->
-      <div class="clip_frame colelem" id="u2293"><!-- image -->
-       <img class="block" id="u2293_img" src="images/cannabis.jpg?crc=296073894" alt="" data-heightwidthratio="0.6691176470588235" data-image-width="136" data-image-height="91"/>
+    <div class="clearfix colelem" id="pppu2293"><!-- group -->
+     <div class="clearfix grpelem" id="ppu2293"><!-- column -->
+      <div class="clearfix colelem" id="pu2293"><!-- group -->
+       <div class="grpelem" id="u2293"><!-- content -->
+        <div class="fluid_height_spacer"></div>
+       </div>
+       <div class="clip_frame grpelem" id="u6170"><!-- image -->
+        <img class="block" id="u6170_img" src="images/crema%20de%20cannabis%205.png?crc=275798639" alt="" data-heightwidthratio="0.708029197080292" data-image-width="137" data-image-height="97"/>
+       </div>
       </div>
       <div class="clip_frame colelem" id="u2316"><!-- image -->
-       <img class="block" id="u2316_img" src="images/cannabis.jpg?crc=296073894" alt="" data-heightwidthratio="0.6691176470588235" data-image-width="136" data-image-height="91"/>
+       <img class="block" id="u2316_img" src="images/cbd%20aceite%20salud%202-crop-u2316.png?crc=215207252" alt="" data-heightwidthratio="0.7205882352941176" data-image-width="136" data-image-height="98"/>
       </div>
-      <div class="clip_frame colelem" id="u2333"><!-- image -->
-       <img class="block" id="u2333_img" src="images/cannabis.jpg?crc=296073894" alt="" data-heightwidthratio="0.6691176470588235" data-image-width="136" data-image-height="91"/>
+      <div class="clearfix colelem" id="pu2333"><!-- group -->
+       <div class="grpelem" id="u2333"><!-- content -->
+        <div class="fluid_height_spacer"></div>
+       </div>
+       <div class="clip_frame grpelem" id="u6183"><!-- image -->
+        <img class="block" id="u6183_img" src="images/cbd%20pomada%20salud%201.png?crc=4219843210" alt="" data-heightwidthratio="0.7132352941176471" data-image-width="136" data-image-height="97"/>
+       </div>
       </div>
      </div>
-     <div class="clearfix grpelem" id="pu2303-6"><!-- column -->
-      <div class="clearfix colelem" id="u2303-6"><!-- content -->
+     <div class="clearfix grpelem" id="pu2303-9"><!-- column -->
+      <div class="clearfix colelem" id="u2303-9"><!-- content -->
        <p id="u2303-2">Información del Producto</p>
-       <p>XXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXX</p>
+       <p id="u2303-3">&nbsp;</p>
+       <p id="u2303-5">Crema Facial</p>
+       <p id="u2303-7">Nuestra crema a base de Cannabis puede iluminar la piel, mejorar su textura, atenuar arrugas y lineas de expresión ayuda a calmar la piel sensible, con acné o irritada, reducir manchas y&nbsp; es excelente para pieles secas.</p>
       </div>
-      <div class="clearfix colelem" id="u2318-6"><!-- content -->
+      <div class="clearfix colelem" id="u2318-9"><!-- content -->
        <p id="u2318-2">Información del Producto</p>
-       <p>XXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXX</p>
+       <p id="u2318-3">&nbsp;</p>
+       <p id="u2318-5">Gel</p>
+       <p id="u2318-7">Puedes usar nuestro Gel a base de Cannabis principalmente para aliviar dolores musculares y articulares, así como para reducir la inflamación en zonas específicas del cuerpo. También puede ser útil en el tratamiento de condiciones como la artritis y el dolor crónico. Para usarlo, simplemente aplica una pequeña cantidad sobre la zona afectada y masajea suavemente hasta que se absorba por completo.</p>
       </div>
-      <div class="clearfix colelem" id="u2335-6"><!-- content -->
+      <div class="clearfix colelem" id="u2335-9"><!-- content -->
        <p id="u2335-2">Información del Producto</p>
-       <p>XXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXX</p>
+       <p id="u2335-3">&nbsp;</p>
+       <p id="u2335-5">Pomadas</p>
+       <p id="u2335-7">Nuestras pomadas a base de Cannabis reducen el dolor y la inflamación, la actividad antiinflamatoria del cannabis puede ser beneficiosa para tratar afecciones como el eczema, nuestra pomada ayudar a reducir los brotes de acne.</p>
       </div>
      </div>
      <div class="clearfix grpelem" id="pu2306"><!-- column -->
@@ -127,20 +146,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu2350"><!-- group -->
-     <div class="clip_frame grpelem" id="u2350"><!-- image -->
-      <img class="block" id="u2350_img" src="images/cannabis.jpg?crc=296073894" alt="" data-heightwidthratio="0.6691176470588235" data-image-width="136" data-image-height="91"/>
-     </div>
-     <div class="clearfix grpelem" id="u2352-6"><!-- content -->
-      <p id="u2352-2">Información del Producto</p>
-      <p>XXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXXXXXXXXXXXXX XXXXXXXXXXXX XXX&nbsp; X X&nbsp; X X X XXXXXXXXXXXXXXX</p>
-     </div>
-     <div class="clip_frame grpelem" id="u2353"><!-- image -->
-      <img class="block" id="u2353_img" src="images/860829.png?crc=3800181972" alt="" data-heightwidthratio="1" data-image-width="39" data-image-height="39"/>
-     </div>
-    </div>
    </div>
-   <div class="verticalspacer" data-offset-top="749" data-content-above-spacer="749" data-content-below-spacer="258" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="607" data-content-above-spacer="607" data-content-below-spacer="258" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu1766"><!-- column -->
     <div class="colelem" id="u1766"><!-- custom html -->
      "<link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
