--- a/mas-vendidos.html
+++ b/mas-vendidos.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Mas vendidos</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_no-inicio_.css?crc=46704947"/>
-  <link rel="stylesheet" type="text/css" href="css/mas-vendidos.css?crc=383630491" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_no-inicio_.css?crc=262701562"/>
+  <link rel="stylesheet" type="text/css" href="css/mas-vendidos.css?crc=141726814" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -48,6 +48,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u236"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u239" href="nosotros.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u240-4"><!-- content --><p>Nosotros</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u5935"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u5938" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5939-4"><!-- content --><p>Registro</p></div></a>
       </div>
      </nav>
      <a class="nonblock nontext clip_frame grpelem" id="u2537" href="inicio-sesion.html"><!-- image --><img class="block" id="u2537_img" src="images/1827504.png?crc=258168644" alt="" title="Notificaciones por leer" data-heightwidthratio="1" data-image-width="27" data-image-height="27"/></a>
