--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "index.css"], "outOfDate":[]};
 </script>
   
   <title>Inicio</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_no-inicio_.css?crc=3946521443"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=96683075" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_no-inicio_.css?crc=262701562"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3899506831" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -49,6 +49,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u236"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u239" href="nosotros.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u240-4"><!-- content --><p>Nosotros</p></div></a>
       </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u5935"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u5938" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5939-4"><!-- content --><p>Registro</p></div></a>
+      </div>
      </nav>
      <a class="nonblock nontext clip_frame grpelem" id="u2537" href="inicio-sesion.html"><!-- image --><img class="block" id="u2537_img" src="images/1827504.png?crc=258168644" alt="" title="Notificaciones por leer" data-heightwidthratio="1" data-image-width="27" data-image-height="27"/></a>
      <a class="nonblock nontext clip_frame grpelem" id="u1700" href="inicio-sesion.html"><!-- image --><img class="block" id="u1700_img" src="images/263142.png?crc=4073066833" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
@@ -58,7 +61,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clip_frame grpelem" id="u2558"><!-- image -->
       <img class="block" id="u2558_img" src="images/captura%20de%20pantalla%202024-06-06%20161926-crop-u2558.jpg?crc=84961699" alt="" data-heightwidthratio="0.053440702781844804" data-image-width="1366" data-image-height="73"/>
      </div>
-     <div class="Button rounded-corners clearfix grpelem" id="buttonu2560" data-visibility="changed" style="visibility:hidden"><!-- container box -->
+     <div class="Button clearfix grpelem" id="buttonu2560" data-visibility="changed" style="visibility:hidden"><!-- container box -->
       <div class="clearfix grpelem" id="u2561-4"><!-- content -->
        <p>Búsqueda</p>
       </div>
