--- a/inicio-sesion.html
+++ b/inicio-sesion.html
@@ -11,14 +11,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "inicio-sesion.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musemenu.js", "jquery.watch.js", "require.js", "webpro.js", "inicio-sesion.css"], "outOfDate":[]};
 </script>
   
   <title>Inicio Sesion</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_no-inicio_.css?crc=46704947"/>
-  <link rel="stylesheet" type="text/css" href="css/inicio-sesion.css?crc=4029122723" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_no-inicio_.css?crc=262701562"/>
+  <link rel="stylesheet" type="text/css" href="css/inicio-sesion.css?crc=124678925" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -49,6 +49,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="MenuItemContainer clearfix grpelem" id="u236"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u239" href="nosotros.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u240-4"><!-- content --><p>Nosotros</p></div></a>
       </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u5935"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u5938" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5939-4"><!-- content --><p>Registro</p></div></a>
+      </div>
      </nav>
      <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u2537" href="inicio-sesion.html"><!-- image --><img class="block" id="u2537_img" src="images/1827504.png?crc=258168644" alt="" title="Notificaciones por leer" data-heightwidthratio="1" data-image-width="27" data-image-height="27"/></a>
      <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u1700" href="inicio-sesion.html"><!-- image --><img class="block" id="u1700_img" src="images/263142.png?crc=4073066833" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
@@ -74,26 +77,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clearfix colelem" id="u2076-6"><!-- content -->
          <p>¡Hola! Bienvenido a <span id="u2076-2">kannamarket</span>, te invitamos a iniciar sesión.</p>
         </div>
-        <div class="clearfix colelem" id="u2079-4"><!-- content -->
-         <p>Usuario</p>
-        </div>
-        <div class="clearfix colelem" id="u3192"><!-- group -->
-         <div class="clearfix grpelem" id="u2082"><!-- group -->
-          <div class="clearfix grpelem" id="u2088-4"><!-- content -->
-           <p>mail@mail.com</p>
-          </div>
-         </div>
-        </div>
-        <div class="clearfix colelem" id="u3183-4"><!-- content -->
-         <p>Contraseña</p>
-        </div>
-        <div class="clearfix colelem" id="u3195"><!-- group -->
-         <div class="clearfix grpelem" id="u3184"><!-- group -->
-          <div class="clearfix grpelem" id="u3185-4"><!-- content -->
-           <p>******************</p>
-          </div>
-         </div>
-        </div>
         <div class="clearfix colelem" id="u2100-5"><!-- content -->
          <p>Recordarme&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="u2100-2">Olvidaste tu contraseña</span></p>
         </div>
@@ -104,6 +87,37 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clip_frame grpelem" id="u3216"><!-- image -->
       <img class="block" id="u3216_img" src="images/free-user-icon-3296-thumb.png?crc=432468204" alt="" data-heightwidthratio="1" data-image-width="106" data-image-height="106"/>
      </div>
+     <form class="form-grp clearfix grpelem" id="widgetu6106" method="post" enctype="multipart/form-data" action="scripts/form-u6106.php" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- none box -->
+      <div class="clearfix grpelem" id="pwidgetu6107"><!-- column -->
+       <div class="fld-grp clearfix colelem" id="widgetu6107" data-required="true" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- none box -->
+        <label class="fld-label actAsDiv clearfix colelem" id="u6109-4" for="widgetu6107_input"><!-- content --><span class="actAsPara">Usuario:</span></label>
+        <span class="fld-input NoWrap actAsDiv clearfix colelem" id="u6110-4"><!-- content --><div id="u6110-3"><input class="wrapped-input" type="text" spellcheck="false" id="widgetu6107_input" name="custom_U6107" tabindex="1"/><label class="wrapped-input fld-prompt" id="widgetu6107_prompt" for="widgetu6107_input"><span class="actAsPara">Introducir Usuario</span></label></div></span>
+       </div>
+       <div class="fld-grp clearfix colelem" id="widgetu6111" data-required="true" data-type="email" data-sizePolicy="fluidWidth" data-pintopage="page_fluidx"><!-- none box -->
+        <label class="fld-label actAsDiv clearfix colelem" id="u6114-4" for="widgetu6111_input"><!-- content --><span class="actAsPara">Contraseña:</span></label>
+        <span class="fld-input NoWrap actAsDiv clearfix colelem" id="u6112-4"><!-- content --><div id="u6112-3"><input class="wrapped-input" type="email" spellcheck="false" id="widgetu6111_input" name="Email" tabindex="2"/><label class="wrapped-input fld-prompt" id="widgetu6111_prompt" for="widgetu6111_input"><span class="actAsPara">Introducir Contraseña</span></label></div></span>
+       </div>
+      </div>
+      <div class="clearfix grpelem" id="ppu6115-4"><!-- column -->
+       <div class="clearfix colelem" id="pu6115-4"><!-- group -->
+        <div class="clearfix grpelem" id="u6115-4"><!-- content -->
+         <p>Enviando formulario...</p>
+        </div>
+        <div class="clearfix grpelem" id="u6121-4"><!-- content -->
+         <p>El servidor ha detectado un error.</p>
+        </div>
+        <div class="clearfix grpelem" id="u6116-3"><!-- content -->
+         <p>&nbsp;</p>
+        </div>
+       </div>
+       <button class="submit-btn NoWrap clearfix colelem" id="u6122-3" type="submit" value="&nbsp;" tabindex="3"><!-- content -->
+        <div style="margin-top:-15px;height:15px;">
+         <p>&nbsp;</p>
+        </div>
+       </button>
+      </div>
+     </form>
+     <a class="nonblock nontext clearfix grpelem" id="u6160-4" href="registro.html"><!-- content --><p><span id="u6160">Crear una cuenta</span></p></a>
     </div>
     <div class="clearfix colelem" id="u3201"><!-- group -->
      <div class="pointer_cursor rounded-corners clearfix grpelem" id="u2106"><!-- group -->
@@ -112,7 +126,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="758" data-content-above-spacer="758" data-content-below-spacer="258" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="759" data-content-above-spacer="759" data-content-below-spacer="258" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu1617"><!-- column -->
     <div class="colelem" id="u1617"><!-- custom html -->
      "<link rel="shorcut icon" type="image/x-icon" href="favicon.ico">
@@ -190,7 +204,7 @@ var suppressMissingFileError = false
 k[1]:null,k=k&&k[2]?k[2]:null;switch(k.toLowerCase()){case "css":i=i.replace(/\W/gi,"_").replace(/^([^a-z])/gi,"_$1");g.className+=" "+i;i=a(d(g,"color"));k=a(d(g,"backgroundColor"));i!=0||k!=0?(Muse.assets.required.splice(j,1),"undefined"!=typeof b[l]&&(i!=b[l]>>>24||k!=(b[l]&16777215))&&Muse.assets.outOfDate.push(l)):j++;g.className="version";break;case "js":j++;break;default:throw Error("Unsupported file type: "+k);}}c?c().jquery!="1.8.3"&&Muse.assets.outOfDate.push("jquery-1.8.3.min.js"):Muse.assets.required.push("jquery-1.8.3.min.js");
 g.parentNode.removeChild(g);if(Muse.assets.outOfDate.length||Muse.assets.required.length)g="Puede que determinados archivos falten en el servidor o sean incorrectos. Limpie la cache del navegador e inténtelo de nuevo. Si el problema persiste, póngase en contacto con el administrador del sitio web.",f&&Muse.assets.outOfDate.length&&(g+="\nOut of date: "+Muse.assets.outOfDate.join(",")),f&&Muse.assets.required.length&&(g+="\nMissing: "+Muse.assets.required.join(",")),suppressMissingFileError?(g+="\nUse SuppressMissingFileError key in AppPrefs.xml to show missing file error pop up.",console.log(g)):alert(g)};location&&location.search&&location.search.match&&location.search.match(/muse_debug/gi)?
 setTimeout(function(){f(!0)},5E3):f()}};
-var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
+var muse_init=function(){require.config({baseUrl:""});require(["jquery","museutils","whatinput","jquery.musemenu","webpro","jquery.watch"],function(c){var $ = c;$(document).ready(function(){try{
 window.Muse.assets.check($);/* body */
 Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
@@ -198,6 +212,7 @@ Muse.Utils.resizeHeight('.browser_width');/* resize height */
 Muse.Utils.requestAnimationFrame(function() { $('body').addClass('initialized'); });/* mark body as initialized */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.initWidget('.MenuBar', ['#bp_infinity'], function(elem) { return $(elem).museMenu(); });/* unifiedNavBar */
+Muse.Utils.initWidget('#widgetu6106', ['#bp_infinity'], function(elem) { return new WebPro.Widget.Form(elem, {validationEvent:'submit',errorStateSensitivity:'high',fieldWrapperClass:'fld-grp',formSubmittedClass:'frm-sub-st',formErrorClass:'frm-subm-err-st',formDeliveredClass:'frm-subm-ok-st',notEmptyClass:'non-empty-st',focusClass:'focus-st',invalidClass:'fld-err-st',requiredClass:'fld-err-st',ajaxSubmit:true}); });/* #widgetu6106 */
 Muse.Utils.fullPage('#page');/* 100% height page */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
