--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -17,8 +17,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Mi perfil</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_si-inicio_.css?crc=3867217927"/>
-  <link rel="stylesheet" type="text/css" href="css/mi-perfil.css?crc=238296900" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-p_g_-maestra-_si-inicio_.css?crc=4073843502"/>
+  <link rel="stylesheet" type="text/css" href="css/mi-perfil.css?crc=392096867" id="pagesheet"/>
   <!-- JS includes -->
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?crc=4241844378" type="text/javascript"></script>
@@ -41,6 +41,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <div class="MenuItemContainer clearfix grpelem" id="u1794"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u1795" href="nosotros.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u1798-4"><!-- content --><p>Nosotros</p></div></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u5914"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu borderbox clearfix colelem" id="u5915" href="registro.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u5918-4"><!-- content --><p>Registro</p></div></a>
       </div>
      </nav>
      <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u2547" href="mi-perfil.html"><!-- image --><img class="block" id="u2547_img" src="images/1827504.png?crc=258168644" alt="" title="Notificaciones por leer" data-heightwidthratio="1" data-image-width="29" data-image-height="29"/></a>
